feat: gen routes and schema
